<?xml version="1.0"?>
<package format="2">
  <name>rqt_multi_uav_gcs</name>
  <version>0.3.0</version>
  <description>Multi UAV GCS</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
  <!-- The export tag contains other, unspecified, tags -->
</package>
